src/GeositeFramework/css/app.css
/* -------------------------------------------------- 
   Table of Contents
-----------------------------------------------------
:: Shared Styles
:: Top Bar
:: Content Area - Sidebar
:: Content Area - Map
:: Media Queries
*/

/* -----------------------------------------
   Shared Styles
----------------------------------------- */

@import url(http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700);

html, body {
	height: 100%;
	min-height: 100%;
	overflow: hidden;
	font-family: 'Archivo Narrow', 'Arial Narrow', Arial, Helvetica, sans-serif !important;
}
h1, h2, h3, h4, h5, h6 {
	font-family: 'Archivo Narrow', 'Arial Narrow', Arial, Helvetica, sans-serif;
}

/*------------------------------------------
    EXT Style "adjustments"
------------------------------------------*/
.x-grid-cell
{
    padding: 0px;
}

/* -----------------------------------------
   Top Bar Styling
----------------------------------------- */

.top-bar {
	margin-bottom: 0;
	background: #26648E;
	}
	.top-bar ul > li.divider {
		background: white;
		background: rgba(255,255,255,.5);
	}
	.top-bar ul > li.name h1 {
		background: white;
		position: relative;
		float: left;
		}
		.top-bar ul > li.name h1:after {
			content: '';
			position: absolute;
			right: -15px;
			top: 0;
			width: 0;
			height: 0;
			border-top: 0px solid transparent;
			border-left: 15px solid white;
			border-bottom: 45px solid transparent;
		}
		.top-bar ul > li.name h1 a {
			color: #26648E;
			text-transform: uppercase;
			font-size: 16px !important;
		}
	.top-bar ul > li.name h2{
		font-size: 16px;
		float: left;
		margin-left: 22px;
		color: white;
		text-transform: uppercase;
	    
	}
    .top-bar ul > li.name h2 a {
        font-size: inherit;
        line-height: normal;
    }
		
	.top-bar ul > li:not(.name):hover, 
	.top-bar ul > li:not(.name).active, 
	.top-bar ul > li:not(.name):focus {
		background: white;
		background: rgba(255,255,255,.25);
		}
		.top-bar ul > li:not(.name):hover a, 
		.top-bar ul > li:not(.name).active a, 
		.top-bar ul > li:not(.name):focus a {
			color: rgb(14, 133, 138);
			color: rgba(255,255,255,1);
		}
	
	.top-bar ul.left {
		margin-left: 26px;
		font-size: 16px;
		font-weight: bold;
		color: white;
		text-transform: uppercase;
	}
	
	
/* -----------------------------------------
   Content Area - Helpers
----------------------------------------- */
	
.view-left #left-pane,
.view-right #right-pane,
.view-split .content {
	display: block;
}
.view-split .content {
	width: 50%;
}

.content {
    position: relative;
	height: 100%;
	width: 100%;
	overflow: hidden;
	float: left;
	display: none;
	}

/* -----------------------------------------
   Content Area - Sidebar
----------------------------------------- */
	

	.content .sidebar {
		width: 85px;
		height: 100%;
		background: #333;
		position: relative;
		float: left;
		box-shadow: 0 0 20px #666;
		box-shadow: 0 0 20px rgba(0,0,0,.5);
		z-index: 9;
		}
		.content .sidebar ul.side-nav {
			padding: 0;
			}
			.content .sidebar ul.side-nav li {
				margin: 0;
				}
				.content .sidebar ul.side-nav li:hover a {
					background: #222;
					color: #FFF;
				}
				.content .sidebar ul.side-nav li a {
					max-height: 75px;
					text-align: center;
					color: #939598;
					min-height: 75px;
					padding: 10px 0 0;
					font-size: 12px;
					font-weight: 700;
					line-height: 16px;
				}
			.content .sidebar ul.side-nav.top {
				overflow: hidden;
			}
			.content .sidebar ul.side-nav.top li {
				border-bottom: #808285 solid 1px;
				}
				.content .sidebar ul.side-nav.top li:last-child {
				}
				.content .sidebar ul.side-nav.top li.active a {
					background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
					background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0)));
					background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
					background: -o-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
					background: -ms-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
					background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
					color: #FFF;
				}
		
		.content .sidebar ul.side-nav.bottom {
			position: absolute;
			bottom: 0;
			}
			.content .sidebar ul.side-nav.bottom > li.divider {
				border-top: #808285 solid 1px;
			}
			
		.content .sidebar img.icon {
			width: 32px;
			height: 32px;
			display: block;
			margin: 0 auto 7px;
			border: none;
			color: transparent;
		}

    .content .plugin-container {
        position: absolute;
        border: 5px #444 solid;
        border-radius: 5px;
        width: 300px;
        height: 400px;
        overflow: visible;
        background: #FFFFFF;
        z-index: 999;
        box-shadow: 0 0 15px #333;
		box-shadow: 0 0 15px rgba(0,0,0,.5);
        }
        .content .plugin-container:before {
        	content: '';
			position: absolute;
			width: 0;
			height: 0;
			left: -15px;
			top: 10px;
			display: block;
			border-right: 15px solid #444;
			border-top: 15px solid transparent;
			border-bottom: 15px solid transparent;
        }
        .content .plugin-container-header {
            height: 28px;
            padding: 5px 8px;
			background: #444;
            }
            .content .plugin-container-header h6 {
            	float: left;
            	margin: 0;
            	color: white;
            }
            .content .plugin-container-header a {
                float: left;
                padding-left: 10px;
                color: #CCC;
            	}
            	.content .plugin-container-header a:hover {
            		color: #FFF;
            	}
/* ... */

